testdata/parser/negative/14.pdl
#version 100

// illegal builtin
composite main(in a, out b) {
	int x = get(a);
	skip;
}